.. Author notes: this file is formatted with restructured text
(http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
The changelog style is adapted from Apache Lucene.

Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

API Changes:

  * util-core: ByteWriter has been transformed into a true trait which can now
    be implemented outside of the com.twitter.io package. ``PHAB_ID=D59996``

  * util-core: The method ByteWriter.owned() has been moved to a sub trait,
    BufByteWriter, to separate the notion of the target buffer representation from the
    writer methods in order to make it easier to target different buffer representations.
    ``PHAB_ID=D61215``

  * util-stats: ``PHAB_ID=D59762``

   - `ProxyStatsReceiver.self` is now protected (was public before).
   - `StatsReceiver.repr` is now `def` (was `val` before).

6.45.0  2017-06-06

New Features:

  * util-app: Optional resource shutdown sequencing for registered closables
    via `c.t.app.App#closeOnExitLast`. See longer note there for usage.
    ``RB_ID=916120``

  * util-core: Added `writeBytes(Buf)` to the ByteWriter abstract class to allow
    for efficient writing of the `c.t.io.Buf` type. ``RB_ID=917094``

  * util-core: Added `ByteReader.readUnsignedLongBE` and `ByteReader.readUnsignedLongLE`.
    ``RB_ID=917289``

API Changes:

  * util-collection: Removed deprecated `c.t.u.JMapWrapper`. Use
    `scala.collection.JavaConverters` instead. ``RB_ID=915544``

  * util-core: ByteReader extends the AutoClosable interface to provide
    a notion of resource management. Users should ensure that instances
    of the ByteReader interface are closed after they are no longer
    needed. ``RB_ID=916086``

  * util-core: Removed deprecated methods from `c.t.u.Future`:
      - `rawException`; use `exception` instead
      - `cancel`; use `raise` instead

    Removed deprecated `c.t.u.Futures.select`; use `Future.select` instead.